--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -9,13 +9,12 @@
 <link rel="stylesheet" href="../../css/style.css">
 
 <style type="text/css">
-	footer div div a {
-		text-decoration: none;
-		color : black;
-		padding : 5px;
-		border-left : 0.5px solid black;
-	}
-
+footer div div a {
+	text-decoration: none;
+	color: black;
+	padding: 5px;
+	border-left: 0.5px solid black;
+}
 </style>
 
 </head>
@@ -52,7 +51,9 @@
 			<div class="col d-flex justify-content-end">
 				<button>
 					<!--  class="btn btn-lg btn-primary" -->
-					<i class="bi bi-list fs-2"></i><br>카테고리
+					<i class="bi bi-list fs-2"></i>
+					<br>
+					카테고리
 				</button>
 			</div>
 
@@ -80,10 +81,14 @@
 					</div>
 					<div class="col-2">
 						<button>
-							<i class="bi bi-person"></i><br>마이쿠팡
+							<i class="bi bi-person"></i>
+							<br>
+							마이쿠팡
 						</button>
 						<button>
-							<i class="bi bi-cart4"></i><br>장바구니
+							<i class="bi bi-cart4"></i>
+							<br>
+							장바구니
 						</button>
 					</div>
 
@@ -120,10 +125,12 @@
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
 		<!-- 광고 carousel e -->
@@ -132,7 +139,8 @@
 		<div class="width80">
 			<div class="row mt-4">
 				<div class="col">
-					<span class="fs-3 fw-bold p-1">오늘의 발견</span>ㅣ 오늘 쿠팡이 엄선한 가장 HOT한 상품!
+					<span class="fs-3 fw-bold p-1">오늘의 발견</span>
+					ㅣ 오늘 쿠팡이 엄선한 가장 HOT한 상품!
 				</div>
 			</div>
 
@@ -174,14 +182,14 @@
 		<!-- today's recommendation start -->
 		<div class="row width80 my-4">
 			<div class="col">
-				<i class="bi bi-bag-heart-fill fs-3 text-danger"></i><span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
+				<i class="bi bi-bag-heart-fill fs-3 text-danger"></i>
+				<span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
 			</div>
 		</div>
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 			</div>
@@ -189,7 +197,8 @@
 				<div class="carousel-item active">
 					<div class="card-group width80">
 						<div class="card">
-							<a> <img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
+							<a>
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
 							</a>
 							<div class="card-body">
 								<h5 class="card-title">상품이름</h5>
@@ -352,10 +361,12 @@
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
 		<!-- today's recommendation end -->
@@ -364,14 +375,14 @@
 		<!-- today's recommendation start -->
 		<div class="row width77 my-4">
 			<div class="col">
-				<i class="bi bi-bag-heart-fill fs-3 text-danger"></i><span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
+				<i class="bi bi-bag-heart-fill fs-3 text-danger"></i>
+				<span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
 			</div>
 		</div>
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 			</div>
@@ -379,7 +390,8 @@
 				<div class="carousel-item active">
 					<div class="card-group width80">
 						<div class="card">
-							<a> <img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
+							<a>
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
 							</a>
 							<div class="card-body">
 								<h5 class="card-title">상품이름</h5>
@@ -542,10 +554,12 @@
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
 		<!-- today's recommendation end -->
@@ -555,66 +569,91 @@
 	<footer class="mt-5 bg-light">
 		<div class="row">
 			<div class="col d-flex justify-content-center">
-				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;">회사소개</a> <a
-					href="https://ir.aboutcoupang.com/English/home/" target="_blank">Investor Relations</a> <a
-					href="https://rocketyourcareer.kr.coupang.com" target="_blank">인재채용</a> <a
-					href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B">입점 / 제휴문의</a> <a
-					href="https://csmessenger.coupang.com/cs-center/notice/main">공지사항</a> <a
-					href="https://csmessenger.coupang.com/cs-center/voc/main">고객의 소리</a> <a href="/np/policies/terms">이용약관</a> <a
-					href="/np/policies/privacy"><b>개인정보 처리방침</b></a> <a
-					href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter">쿠팡페이 이용약관</a> <a
-					href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy"><b>쿠팡페이 개인정보처리방침</b></a> <a
-					href="/np/safety">신뢰관리센터</a> <a href="https://partners.coupang.com/" target="_blank">제휴마케팅</a> <a
-					href="https://ads.coupang.com" target="_blank">광고안내</a>
+				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;">회사소개</a>
+				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank">Investor Relations</a>
+				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank">인재채용</a>
+				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B">입점 / 제휴문의</a>
+				<a href="https://csmessenger.coupang.com/cs-center/notice/main">공지사항</a>
+				<a href="https://csmessenger.coupang.com/cs-center/voc/main">고객의 소리</a>
+				<a href="/np/policies/terms">이용약관</a>
+				<a href="/np/policies/privacy">
+					<b>개인정보 처리방침</b>
+				</a>
+				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter">쿠팡페이 이용약관</a>
+				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy">
+					<b>쿠팡페이 개인정보처리방침</b>
+				</a>
+				<a href="/np/safety">신뢰관리센터</a>
+				<a href="https://partners.coupang.com/" target="_blank">제휴마케팅</a>
+				<a href="https://ads.coupang.com" target="_blank">광고안내</a>
 			</div>
 		</div>
 		<div class="row p-5">
 			<div class="col">
 				<h1>
-					<a href="/" title="COUPANG" style="text-decoration: none; color : gray">COUPANG</a>
+					<a href="/" title="COUPANG" style="text-decoration: none; color: gray">COUPANG</a>
 				</h1>
 			</div>
 			<div class="col">
 				<address>
-					상호명 및 호스팅 서비스 제공 : 쿠팡(주)<br> 대표이사 : 강한승,박대준<br> 서울시 송파구 송파대로 570 <br> 사업자 등록번호 : 120-88-00767 <br>
-					통신판매업신고 : 2017-서울송파-0680<br> <a
-						href="http://www.ftc.go.kr/info/bizinfo/communicationViewPopup.jsp?wrkr_no=1208800767" target="_blank"
-						class="licensee" title="사업자정  보 확인">사업자정보 확인 &gt;</a>
+					상호명 및 호스팅 서비스 제공 : 쿠팡(주)
+					<br>
+					대표이사 : 강한승,박대준
+					<br>
+					서울시 송파구 송파대로 570
+					<br>
+					사업자 등록번호 : 120-88-00767
+					<br>
+					통신판매업신고 : 2017-서울송파-0680
+					<br>
+					<a href="http://www.ftc.go.kr/info/bizinfo/communicationViewPopup.jsp?wrkr_no=1208800767" target="_blank" class="licensee" title="사업자정  보 확인">사업자정보 확인 &gt;</a>
 				</address>
 			</div>
 			<div class="col">
-				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터"> <strong>365고객센터</strong>
-					| 전자금융거래분쟁처리담당<br> <em>1577-7011 (유료)</em> 서울시 송파구 송파대로 570<br> <span class="contact-fax">email :
-						help@coupang.com</span>
+				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터">
+					<strong>365고객센터</strong> | 전자금융거래분쟁처리담당
+					<br>
+					<em>1577-7011 (유료)</em> 서울시 송파구 송파대로 570
+					<br>
+					<span class="contact-fax">email : help@coupang.com</span>
 				</a>
 			</div>
 			<div class="col">
 				<p class="safe-service">
-					<strong>우리은행 채무지급보증 안내</strong><br> <span> 당사는 고객님이 현금 결제한 금액에 대해<br>우리은행과 채무지급보증 계약을 체결하여<br>안전거래를
-						보장하고 있습니다.<br>
-					</span> <a href="javascript:;" id="serviceCheck" class="service-check" title="서비스 가입사실 확인">서비스 가입사실 확인 &gt;</a>
+					<strong>우리은행 채무지급보증 안내</strong>
+					<br>
+					<span>
+						당사는 고객님이 현금 결제한 금액에 대해
+						<br>
+						우리은행과 채무지급보증 계약을 체결하여
+						<br>
+						안전거래를 보장하고 있습니다.
+						<br>
+					</span>
+					<a href="javascript:;" id="serviceCheck" class="service-check" title="서비스 가입사실 확인">서비스 가입사실 확인 &gt;</a>
 				</p>
 			</div>
 		</div>
 		<div class="footer-layer3 slide-unit">
-			<div class="certification-list"
-				style="width: 968px; height: 80px; margin: 0 auto; background: url(//static.coupangcdn.com/image/coupang/common/footer_asset_v10.png) no-repeat; background-position: -44px -92px; position: relative;">
-			</div>
+			<div class="certification-list" style="width: 968px; height: 80px; margin: 0 auto; background: url(//static.coupangcdn.com/image/coupang/common/footer_asset_v10.png) no-repeat; background-position: -44px -92px; position: relative;"></div>
 		</div>
 		<div class="footer-layer4">
 			<div class="coupang-copyright">
 				<p class="info" style="padding-top: 9px">
-					사이버몰 내 판매되는 상품 중에는 쿠팡에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다. <br> 마켓플레이스(오픈마켓) 상품의 경우 쿠팡은 통신판매중개자이며
-					통신판매의 당사자가 아닙니다. <br>쿠팡은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다. <br> 쿠팡은 소비자 보호와 안전거래를 위해
-					신뢰관리센터(CM112@coupang.com)를 운영하고 있으며, 관련 분쟁이 발생할 경우 별도의 분쟁 처리절차에 의거 분쟁이 처리됩니다.<br> Copyright © Coupang Corp.
-					2010-2021 All Rights Reserved.
+					사이버몰 내 판매되는 상품 중에는 쿠팡에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
+					<br>
+					마켓플레이스(오픈마켓) 상품의 경우 쿠팡은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
+					<br>
+					쿠팡은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
+					<br>
+					쿠팡은 소비자 보호와 안전거래를 위해 신뢰관리센터(CM112@coupang.com)를 운영하고 있으며, 관련 분쟁이 발생할 경우 별도의 분쟁 처리절차에 의거 분쟁이 처리됩니다.
+					<br>
+					Copyright © Coupang Corp. 2010-2021 All Rights Reserved.
 				</p>
 				<ul class="sns-link">
-					<li><a href="https://www.facebook.com/Coupang.korea" target="_blank" class="facebook" title="쿠팡 페이스북">쿠팡
-							페이스북</a></li>
+					<li><a href="https://www.facebook.com/Coupang.korea" target="_blank" class="facebook" title="쿠팡 페이스북">쿠팡 페이스북</a></li>
 					<li><a href="https://news.coupang.com/" target="_blank" class="blog" title="쿠팡 뉴스룸">쿠팡 뉴스룸</a></li>
-					<li><a href="https://www.instagram.com/coupang" target="_blank" class="instagram" title="쿠팡 인스타그램">쿠팡
-							인스타그램</a></li>
+					<li><a href="https://www.instagram.com/coupang" target="_blank" class="instagram" title="쿠팡 인스타그램">쿠팡 인스타그램</a></li>
 				</ul>
 			</div>
 		</div>
