--- a/public/durian/html/xdmin/loginout/regForm2.html
+++ b/public/durian/html/xdmin/loginout/regForm2.html
@@ -17,14 +17,14 @@
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
 <style type="text/css">
-	select, input {
-		margin-bottom: 20px;
-	}
-	
-	label {
-		margin-bottom: 5px;
-	}
+select, input {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 
+label {
+	margin-bottom: 5px;
+}
 </style>
 
 </head>
@@ -87,9 +87,13 @@
 
 							<label for="ifmmPwd">비밀번호</label>
 							<input name="ifmmPwd" id="ifmmPwd" type="password" class="form-control">
+							<div class="valid-feedback" id="ifmmPwdValidFeedBack">사용가능한 비밀번호입니다.</div>
+							<div class="invalid-feedback" id="ifmmPwdInvalidFeedBack">사용 불가능한 비밀번호입니다.</div>
 
 							<label for="ifmmPwdConfirm">비밀번호 확인</label>
 							<input name="ifmmPwdConfirm" id="ifmmPwdConfirm" type="password" class="form-control">
+							<div class="valid-feedback" id="ifmmPwdConfirmValidFeedBack">비밀번호가 일치합니다.</div>
+							<div class="invalid-feedback" id="ifmmPwdConfirmInvalidFeedBack">비밀번호가 일치하지 않습니다.</div>
 
 							<label for="ifmmName">이름</label>
 							<input name="ifmmName" id="ifmmName" type="text" class="form-control">
@@ -118,7 +122,7 @@
 							</div>
 							<input name="" id="" type="text" class="form-control" placeholder="인증번호를 입력하세요">
 
-							<input type="submit" class="btn btn-outline-dark d-block w-100" value="가입하기">
+							<input type="submit" id="btnSubmit" class="btn btn-outline-dark d-block w-100" value="가입하기">
 
 
 
@@ -158,14 +162,69 @@
 
 <script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script src="../../../js/validation.js"></script>
+
 <script type="text/javascript">
-	function selectAll1(selectAll1) {
-		const checkboxes 
-			= document.getElementsByName("checkbox1");
-		
-		checkboxes.forEach((checkbox) => {
-			checkbox.checked = selectAll1.checked;
-		})
-	}
+	$("#btnSubmit").on(
+			"click",
+			function() {
+				if (!checkId($("#ifmmId"), $("#ifmmId").val(),
+						"아이디가 유효하지 않습니다. 다시 입력해주세요.")) {
+					return false;
+				}
+
+				if (!checkPassword($("#ifmmPwd"), $("#ifmmPwd").val(),
+						"비밀번호가 유효하지 않습니다.")) {
+					return false;
+				}
+
+				if ($("#ifmmPwd").val() != $("#ifmmPwdConfirm").val()) {
+					alert("비밀번호를 다르게 입력하였습니다.");
+					$("#ifmmPwdConfirm").focus();
+					return false;
+				}
+			});
 </script>
+
+<script type="text/javascript">
+	$(function() {
+		$("#ifmmPwdValidFeedBack").hide();
+		$("#ifmmPwdInvalidFeedBack").hide();
+
+		$("#ifmmPwdConfirmValidFeedBack").hide();
+		$("#ifmmPwdConfirmInvalidFeedBack").hide();
+		$("input")
+				.keyup(
+						function() {
+
+							var pwd1 = $("#ifmmPwd").val();
+							var pwd2 = $("#ifmmPwdConfirm").val();
+							var regExp = /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[!@#$%^&*]).{8,20}$/;
+
+							if (regExp.test(pwd1)) {
+								$("#ifmmPwdValidFeedBack").show();
+								$("#ifmmPwdInvalidFeedBack").hide();
+							} else if (!regExp.test(pwd1) && pwd1.length > 1) {
+								$("#ifmmPwdValidFeedBack").hide();
+								$("#ifmmPwdInvalidFeedBack").show();
+							}
+
+							if (pwd1 != "" && pwd2 != "") {
+								if (pwd1 == pwd2) {
+									$("#ifmmPwdConfirmValidFeedBack").show();
+									$("#ifmmPwdConfirmInvalidFeedBack").hide();
+									$("#submit").removeAttr("disabled");
+								} else {
+									$("#ifmmPwdConfirmValidFeedBack").hide();
+									$("#ifmmPwdConfirmInvalidFeedBack").show();
+									$("#submit").attr("disabled", "disabled");
+								}
+							}
+						});
+	});
+</script>
+
+</body>
 </html>
