--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -303,21 +303,21 @@
 						<div class="row align-items-center mb-1">
 							<div class="col-6 fw-light">아직 회원이 아니세요? 회원가입을 하시면 보다 많은 혜택이 있습니다.</div>
 							<div class="col-6 text-end">
-								<a class="btn btn-outline-dark" style="width: 125px;">회원가입하기</a>
+								<a href="./regForm1.html" class="btn btn-outline-dark" style="width: 125px;">회원가입하기</a>
 							</div>
 						</div>
 
 						<div class="row align-items-center mb-1">
 							<div class="col-6 fw-light">아이디가 기억나지 않으세요? '아이디 찾기'를 해주세요.</div>
 							<div class="col-6 text-end">
-								<a class="btn btn-outline-dark" style="width: 125px;">아이디찾기</a>
+								<a href="./loginFindId.html" class="btn btn-outline-dark" style="width: 125px;">아이디찾기</a>
 							</div>
 						</div>
 
 						<div class="row align-items-center">
 							<div class="col-6 fw-light">비밀번호가 기억나지 않으세요? '비밀번호 찾기'를 해주세요.</div>
 							<div class="col-6 text-end">
-								<a class="btn btn-outline-dark" style="width: 125px;">비밀번호찾기</a>
+								<a href="./loginFindPwd.html" class="btn btn-outline-dark" style="width: 125px;">비밀번호찾기</a>
 							</div>
 						</div>
 
