--- a/public/durian/html/xdmin/loginout/loginFindId.html
+++ b/public/durian/html/xdmin/loginout/loginFindId.html
@@ -78,13 +78,13 @@
 
 						</div>
 
-						<div id="identificationForm" class="text-center mt-5">
+						<div id="identificationForm" class="text-center mt-5 box-white p-5">
 							<button class="btn btn-lg btn-outline-primary mb-2">본인명의 휴대폰으로 인증</button>
 							<p class="text-center">회원님의 명의로 등록된</p> 
 							<p class="text-center">휴대폰으로 본인확인을 진행합니다.</p>
 						</div>
 						
-						<div id="usePhoneNumberForm" class="text-center">
+						<div id="usePhoneNumberForm" class="text-center mt-5 box-white p-5">
 							<table class="table table-sm mt-5">
 								<tr>
 									<th>이름</th>
