--- a/public/durian/html/xdmin/loginout/loginFindPwd.html
+++ b/public/durian/html/xdmin/loginout/loginFindPwd.html
@@ -67,37 +67,38 @@
 
 						<p class="text-center">본인확인을 통해 비밀번호 재설정 하실 수 있습니다.</p>
 						<p class="text-center">쿠팡 가입 시 입력했던 이름과 아이디를 입력해주세요.</p>
-						<table class="table table-sm">
-							<tr>
-								<th>이름</th>
-								<td>
-									<input type="text" class="form-control">
-								</td>
-							</tr>
-							<tr>
-								<th>아이디</th>
-								<td>
-									<input type="text" class="form-control">
-								</td>
-							</tr>
-						</table>
+						<div class="mt-5 box-white p-5">
+							<table class="table table-sm">
+								<tr>
+									<th>이름</th>
+									<td>
+										<input type="text" class="form-control">
+									</td>
+								</tr>
+								<tr>
+									<th>아이디</th>
+									<td>
+										<input type="text" class="form-control">
+									</td>
+								</tr>
+							</table>
 
+							<p class="text-center">비밀번호 찾기 방법을 선택해주세요.</p>
+							<div class="row">
+								<div class="col text-center">
+									<input id="identification" name="findIdMethod" type="radio" class="form-check-input" checked>
+									<label for="identification" class="form-check-label">이메일 주소</label>
+									<input id="usePhoneNumber" name="findIdMethod" type="radio" class="form-check-input">
+									<label for="usePhoneNumber" class="form-check-label">등록된 휴대폰</label>
+								</div>
+							</div>
+
+							<div class="text-center mt-5">
+								<button class="btn btn-lg btn-outline-primary" style="width: 40%;">비밀번호 찾기</button>
+							</div>
+						</div>
 					</div>
 
-					<p class="text-center">비밀번호 찾기 방법을 선택해주세요.</p>
-					
-					<div class="col text-center">
-						<input id="identification" name="findIdMethod" type="radio" class="form-check-input" checked>
-						<label for="identification" class="form-check-label">이메일 주소</label>
-					</div>
-					<div class="col text-center">
-						<input id="usePhoneNumber" name="findIdMethod" type="radio" class="form-check-input">
-						<label for="usePhoneNumber" class="form-check-label">등록된 휴대폰</label>
-					</div>
-					
-					<div class="col-12 text-center mt-5">
-						<button class="btn btn-lg btn-outline-primary" style="width: 40%;">비밀번호 찾기</button>
-					</div>
 
 				</div>
 			</div>
