--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -10,6 +10,13 @@
 
 <link rel="stylesheet" href="../../../css/sidebars.css">
 
+<style type="text/css">
+
+ul.nav li.dropdown:hover > ul.dropdown-menu {
+	display:block; margin:0; 
+}
+
+</style>
 
 </head>
 
