--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -135,7 +135,7 @@ footer div div a {
 
 
 		<!-- 광고 carousel s -->
-		<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+		<div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active" data-bs-interval="5000">
 					<img src="../../images/user/mainPage/ad1.jpg" class="d-block w-120" alt="...">
