--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -466,11 +466,8 @@ footer div div a {
 				</p>
 			</div>
 		</div>
-		<div class="footer-layer3 slide-unit">
-			<div class="certification-list" style="width: 968px; height: 80px; margin: 0 auto; background: url(//static.coupangcdn.com/image/coupang/common/footer_asset_v10.png) no-repeat; background-position: -44px -92px; position: relative;"></div>
-		</div>
-		<div class="footer-layer4">
-			<div class="coupang-copyright">
+		<div class="bg-dark text-light justify-content-center">
+			<div style="width: 600px;" class="">
 				<p class="info" style="padding-top: 9px">
 					사이버몰 내 판매되는 상품 중에는 쿠팡에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
 					<br>
