--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -9,16 +9,20 @@
 <link rel="stylesheet" href="../../css/style.css">
 
 <style type="text/css">
-
-ul.nav li.dropdown:hover > ul.dropdown-menu {
-	display:block; margin:0; 
+ul.nav li.dropdown:hover>ul.dropdown-menu {
+	display: block;
+	margin: 0;
 }
 
 footer div div a {
 	text-decoration: none;
 	color: black;
 	padding: 5px;
-	border-left: 0.5px solid black;
+}
+
+.footerNav {
+	font-size: small;
+	padding: 8px;
 }
 </style>
 
@@ -73,8 +77,7 @@ footer div div a {
 							<li><a class="dropdown-item" href="#">패션의류/잡화</a></li>
 							<li><a class="dropdown-item" href="#">뷰티</a></li>
 							<li><a class="dropdown-item" href="#">식품</a></li>
-						</ul>
-					</li>
+						</ul></li>
 				</ul>
 
 			</div>
@@ -399,35 +402,35 @@ footer div div a {
 	</div>
 
 	<footer class="mt-5 bg-light">
-		<div class="row">
-			<div class="col d-flex justify-content-center">
-				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;">회사소개</a>
-				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank">Investor Relations</a>
-				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank">인재채용</a>
-				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B">입점 / 제휴문의</a>
-				<a href="https://csmessenger.coupang.com/cs-center/notice/main">공지사항</a>
-				<a href="https://csmessenger.coupang.com/cs-center/voc/main">고객의 소리</a>
-				<a href="/np/policies/terms">이용약관</a>
-				<a href="/np/policies/privacy">
-					<b>개인정보 처리방침</b>
-				</a>
-				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter">쿠팡페이 이용약관</a>
-				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy">
-					<b>쿠팡페이 개인정보처리방침</b>
-				</a>
-				<a href="/np/safety">신뢰관리센터</a>
-				<a href="https://partners.coupang.com/" target="_blank">제휴마케팅</a>
-				<a href="https://ads.coupang.com" target="_blank">광고안내</a>
+		<div class="row width90">
+			<div class="col d-flex justify-content-center align-items-center">
+				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>|
+				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank" class="footerNav">Investor Relations</a>|
+				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank" class="footerNav">인재채용</a>|
+				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B" class="footerNav">입점 / 제휴문의</a>|
+				<a href="https://csmessenger.coupang.com/cs-center/notice/main" class="footerNav">공지사항</a>|
+				<a href="https://csmessenger.coupang.com/cs-center/voc/main" class="footerNav">고객의 소리</a>|
+				<a href="/np/policies/terms" class="footerNav">이용약관</a>|
+				<a href="/np/policies/privacy" class="footerNav fw-bold">
+					개인정보 처리방침
+				</a>|
+				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter" class="footerNav">쿠팡페이 이용약관</a>|
+				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy" class="footerNav fw-bold">
+					쿠팡페이 개인정보처리방침
+				</a>|
+				<a href="/np/safety" class="footerNav">신뢰관리센터</a>|
+				<a href="https://partners.coupang.com/" target="_blank" class="footerNav">제휴마케팅</a>|
+				<a href="https://ads.coupang.com" target="_blank" class="footerNav">광고안내</a>
 			</div>
 		</div>
 		<div class="row p-5">
-			<div class="col">
-				<h1>
+			<div class="col-2 offset-1">
+				<h5>
 					<a href="/" title="COUPANG" style="text-decoration: none; color: gray">COUPANG</a>
-				</h1>
+				</h5>
 			</div>
-			<div class="col">
-				<address>
+			<div class="col-3">
+				<address style="font-size: small">
 					상호명 및 호스팅 서비스 제공 : 쿠팡(주)
 					<br>
 					대표이사 : 강한승,박대준
@@ -441,17 +444,19 @@ footer div div a {
 					<a href="http://www.ftc.go.kr/info/bizinfo/communicationViewPopup.jsp?wrkr_no=1208800767" target="_blank" class="licensee" title="사업자정  보 확인">사업자정보 확인 &gt;</a>
 				</address>
 			</div>
-			<div class="col">
-				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터">
+			<div class="col-3">
+				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터" style="font-size: small;">
 					<strong>365고객센터</strong> | 전자금융거래분쟁처리담당
 					<br>
-					<em>1577-7011 (유료)</em> 서울시 송파구 송파대로 570
+					<em style="font-size:x-large;" class="fw-bold">1577-7011 (유료)</em>
+					<br>
+					서울시 송파구 송파대로 570
 					<br>
 					<span class="contact-fax">email : help@coupang.com</span>
 				</a>
 			</div>
 			<div class="col">
-				<p class="safe-service">
+				<p class="safe-service" style="font-size: small;">
 					<strong>우리은행 채무지급보증 안내</strong>
 					<br>
 					<span>
@@ -466,24 +471,26 @@ footer div div a {
 				</p>
 			</div>
 		</div>
-		<div class="bg-dark text-light justify-content-center">
-			<div style="width: 600px;" class="">
-				<p class="info" style="padding-top: 9px">
-					사이버몰 내 판매되는 상품 중에는 쿠팡에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
-					<br>
-					마켓플레이스(오픈마켓) 상품의 경우 쿠팡은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
-					<br>
-					쿠팡은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
-					<br>
-					쿠팡은 소비자 보호와 안전거래를 위해 신뢰관리센터(CM112@coupang.com)를 운영하고 있으며, 관련 분쟁이 발생할 경우 별도의 분쟁 처리절차에 의거 분쟁이 처리됩니다.
-					<br>
-					Copyright © Coupang Corp. 2010-2021 All Rights Reserved.
-				</p>
-				<ul class="sns-link">
-					<li><a href="https://www.facebook.com/Coupang.korea" target="_blank" class="facebook" title="쿠팡 페이스북">쿠팡 페이스북</a></li>
-					<li><a href="https://news.coupang.com/" target="_blank" class="blog" title="쿠팡 뉴스룸">쿠팡 뉴스룸</a></li>
-					<li><a href="https://www.instagram.com/coupang" target="_blank" class="instagram" title="쿠팡 인스타그램">쿠팡 인스타그램</a></li>
-				</ul>
+		<div class="bg-dark text-secondary justify-content-center">
+			<div class="row pt-2 align-items-center">
+				<div class="col-7 offset-2">
+					<p style="font-size: x-small;">
+						사이버몰 내 판매되는 상품 중에는 쿠팡에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
+						<br>
+						마켓플레이스(오픈마켓) 상품의 경우 쿠팡은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
+						<br>
+						쿠팡은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
+						<br>
+						쿠팡은 소비자 보호와 안전거래를 위해 신뢰관리센터(CM112@coupang.com)를 운영하고 있으며, 관련 분쟁이 발생할 경우 별도의 분쟁 처리절차에 의거 분쟁이 처리됩니다.
+						<br>
+						Copyright © Coupang Corp. 2010-2021 All Rights Reserved.
+					</p>
+				</div>
+				<div class="col-3">
+					<a href="https://www.facebook.com/Coupang.korea" target="_blank" class="text-light" title="쿠팡 페이스북"><img src="../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="width:32px;"></a>
+					<a href="https://news.coupang.com/" target="_blank" class="text-light" title="쿠팡 뉴스룸"><img src="../../images/xdmin/sns_icon/icon_round_naver_48.png" style="width:32px;"></a>
+					<a href="https://www.instagram.com/coupang" target="_blank" class="text-light" title="쿠팡 인스타그램"><img src="../../images/xdmin/sns_icon/icon_round_instgram_48.png" style="width:32px;"></a>
+				</div>
 			</div>
 		</div>
 	</footer>
