--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>쿠팡!</title>
+<title>쿠팡! | 상품 이름</title>
 <link rel="stylesheet" href="../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../css/style.css">
@@ -131,31 +131,23 @@ footer div div a {
 			</div>
 
 		</div>
-
-
-		<!-- 광고 carousel s -->
-		<div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active" data-bs-interval="5000">
-					<img src="../../images/user/mainPage/ad1.jpg" class="d-block w-120" alt="...">
+		
+		<div class="row">
+			<div class="col offset-1 d-flex">
+					<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+						<ol class="breadcrumb" style="font-size: small;">
+							<li class="breadcrumb-item">쿠팡 홈</li>
+							<li class="breadcrumb-item">남성패션</li>
+							<li class="breadcrumb-item">의류</li>
+							<li class="breadcrumb-item">맨투맨/후드티</li>
+							<li class="breadcrumb-item active" aria-current="page">후드티</li>
+						</ol>
+					</nav>
 				</div>
-				<div class="carousel-item" data-bs-interval="5000">
-					<img src="../../images/user/mainPage/ad2.jpg" class="d-block w-120" alt="...">
-				</div>
-				<div class="carousel-item" data-bs-interval="5000">
-					<img src="../../images/user/mainPage/ad3.jpg" class="d-block w-120" alt="...">
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
 		</div>
-		<!-- 광고 carousel e -->
+		
+
+
 
 		<!-- width90 start -->
 		<div class="width80">
@@ -400,30 +392,22 @@ footer div div a {
 	<footer class="mt-5 bg-light">
 		<div class="row width90">
 			<div class="col d-flex justify-content-center align-items-center">
-				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>
-				|
-				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank" class="footerNav">Investor Relations</a>
-				|
-				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank" class="footerNav">인재채용</a>
-				|
-				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B" class="footerNav">입점 / 제휴문의</a>
-				|
-				<a href="https://csmessenger.coupang.com/cs-center/notice/main" class="footerNav">공지사항</a>
-				|
-				<a href="https://csmessenger.coupang.com/cs-center/voc/main" class="footerNav">고객의 소리</a>
-				|
-				<a href="/np/policies/terms" class="footerNav">이용약관</a>
-				|
-				<a href="/np/policies/privacy" class="footerNav fw-bold"> 개인정보 처리방침 </a>
-				|
-				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter" class="footerNav">쿠팡페이 이용약관</a>
-				|
-				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy" class="footerNav fw-bold"> 쿠팡페이 개인정보처리방침 </a>
-				|
-				<a href="/np/safety" class="footerNav">신뢰관리센터</a>
-				|
-				<a href="https://partners.coupang.com/" target="_blank" class="footerNav">제휴마케팅</a>
-				|
+				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>|
+				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank" class="footerNav">Investor Relations</a>|
+				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank" class="footerNav">인재채용</a>|
+				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B" class="footerNav">입점 / 제휴문의</a>|
+				<a href="https://csmessenger.coupang.com/cs-center/notice/main" class="footerNav">공지사항</a>|
+				<a href="https://csmessenger.coupang.com/cs-center/voc/main" class="footerNav">고객의 소리</a>|
+				<a href="/np/policies/terms" class="footerNav">이용약관</a>|
+				<a href="/np/policies/privacy" class="footerNav fw-bold">
+					개인정보 처리방침
+				</a>|
+				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter" class="footerNav">쿠팡페이 이용약관</a>|
+				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy" class="footerNav fw-bold">
+					쿠팡페이 개인정보처리방침
+				</a>|
+				<a href="/np/safety" class="footerNav">신뢰관리센터</a>|
+				<a href="https://partners.coupang.com/" target="_blank" class="footerNav">제휴마케팅</a>|
 				<a href="https://ads.coupang.com" target="_blank" class="footerNav">광고안내</a>
 			</div>
 		</div>
@@ -452,7 +436,7 @@ footer div div a {
 				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터" style="font-size: small;">
 					<strong>365고객센터</strong> | 전자금융거래분쟁처리담당
 					<br>
-					<em style="font-size: x-large;" class="fw-bold">1577-7011 (유료)</em>
+					<em style="font-size:x-large;" class="fw-bold">1577-7011 (유료)</em>
 					<br>
 					서울시 송파구 송파대로 570
 					<br>
@@ -491,15 +475,9 @@ footer div div a {
 					</p>
 				</div>
 				<div class="col-3">
-					<a href="https://www.facebook.com/Coupang.korea" target="_blank" class="text-light" title="쿠팡 페이스북">
-						<img src="../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="width: 32px;">
-					</a>
-					<a href="https://news.coupang.com/" target="_blank" class="text-light" title="쿠팡 뉴스룸">
-						<img src="../../images/xdmin/sns_icon/icon_round_naver_48.png" style="width: 32px;">
-					</a>
-					<a href="https://www.instagram.com/coupang" target="_blank" class="text-light" title="쿠팡 인스타그램">
-						<img src="../../images/xdmin/sns_icon/icon_round_instgram_48.png" style="width: 32px;">
-					</a>
+					<a href="https://www.facebook.com/Coupang.korea" target="_blank" class="text-light" title="쿠팡 페이스북"><img src="../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="width:32px;"></a>
+					<a href="https://news.coupang.com/" target="_blank" class="text-light" title="쿠팡 뉴스룸"><img src="../../images/xdmin/sns_icon/icon_round_naver_48.png" style="width:32px;"></a>
+					<a href="https://www.instagram.com/coupang" target="_blank" class="text-light" title="쿠팡 인스타그램"><img src="../../images/xdmin/sns_icon/icon_round_instgram_48.png" style="width:32px;"></a>
 				</div>
 			</div>
 		</div>
