--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -27,6 +27,9 @@ footer div div a {
 .nav-item {
 	font-size: small;
 }
+.randomProduct, .todayHot  {
+	width: 100%;
+}
 </style>
 
 </head>
@@ -133,7 +136,7 @@ footer div div a {
 		</div>
 		
 		<div class="row">
-			<div class="col offset-1 d-flex">
+			<div class="col offset-2 py-3 d-flex">
 					<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 						<ol class="breadcrumb" style="font-size: small;">
 							<li class="breadcrumb-item">쿠팡 홈</li>
@@ -149,55 +152,19 @@ footer div div a {
 
 
 
-		<!-- width90 start -->
-		<div class="width80">
-			<div class="row mt-4">
-				<div class="col">
-					<span class="fs-3 fw-bold p-1">오늘의 발견</span>
-					ㅣ 오늘 쿠팡이 엄선한 가장 HOT한 상품!
-				</div>
-			</div>
+		<!-- width65 start -->
+		<div class="width65">
 
-			<div class="row border p-2">
-				<div class="col-6 ps-0">
-					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot1.png">
-					</button>
-				</div>
-				<div class="col-6 ps-0">
-					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot2.png">
-					</button>
-				</div>
-
-				<div class="col-3 ps-0">
-					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot3.png">
-					</button>
-				</div>
-				<div class="col-3 ps-0">
-					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot4.png">
-					</button>
-				</div>
-				<div class="col-6 ps-0">
-					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot5.png">
-					</button>
-				</div>
-
-
-			</div>
 		</div>
-		<!-- width80 end -->
+		<!-- width65 end -->
 
 
 
 		<!-- today's recommendation start -->
-		<div class="row width80 my-4">
+		<div class="row width65 my-4">
 			<div class="col">
 				<i class="bi bi-bag-heart-fill fs-3 text-danger"></i>
-				<span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
+				<span class="fs-3 fw-bold p-1">함께보면 좋은 상품</span>
 			</div>
 		</div>
 
@@ -209,7 +176,7 @@ footer div div a {
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<div class="card-group width80">
+					<div class="card-group width65">
 						<div class="card">
 							<a>
 								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
@@ -266,7 +233,7 @@ footer div div a {
 					</div>
 				</div>
 				<div class="carousel-item">
-					<div class="card-group width80">
+					<div class="card-group width65">
 						<div class="card">
 							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct6.jpg">
 							<div class="card-body">
@@ -320,7 +287,7 @@ footer div div a {
 					</div>
 				</div>
 				<div class="carousel-item">
-					<div class="card-group width80">
+					<div class="card-group width65">
 						<div class="card">
 							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct11.jpg">
 							<div class="card-body">
@@ -390,7 +357,7 @@ footer div div a {
 	</div>
 
 	<footer class="mt-5 bg-light">
-		<div class="row width90">
+		<div class="row p-2 border-top border-bottom">
 			<div class="col d-flex justify-content-center align-items-center">
 				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>|
 				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank" class="footerNav">Investor Relations</a>|
