--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -27,6 +27,9 @@ footer div div a {
 .nav-item {
 	font-size: small;
 }
+.randomProduct, .todayHot  {
+	width: 100%;
+}
 </style>
 
 </head>
@@ -157,8 +160,8 @@ footer div div a {
 		</div>
 		<!-- 광고 carousel e -->
 
-		<!-- width90 start -->
-		<div class="width80">
+		<!-- width65 start -->
+		<div class="width65">
 			<div class="row mt-4">
 				<div class="col">
 					<span class="fs-3 fw-bold p-1">오늘의 발견</span>
@@ -169,40 +172,40 @@ footer div div a {
 			<div class="row border p-2">
 				<div class="col-6 ps-0">
 					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot1.png">
+						<img class="todayHot border" src="../../images/user/mainPage/todayHot1.png">
 					</button>
 				</div>
 				<div class="col-6 ps-0">
 					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot2.png">
+						<img class="todayHot border" src="../../images/user/mainPage/todayHot2.png">
 					</button>
 				</div>
 
 				<div class="col-3 ps-0">
 					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot3.png">
+						<img class="todayHot border" src="../../images/user/mainPage/todayHot3.png">
 					</button>
 				</div>
 				<div class="col-3 ps-0">
 					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot4.png">
+						<img class="todayHot border" src="../../images/user/mainPage/todayHot4.png">
 					</button>
 				</div>
 				<div class="col-6 ps-0">
 					<button class="btn p-0">
-						<img class="border" src="../../images/user/mainPage/todayHot5.png">
+						<img class="todayHot border" src="../../images/user/mainPage/todayHot5.png">
 					</button>
 				</div>
 
 
 			</div>
 		</div>
-		<!-- width80 end -->
+		<!-- width65 end -->
 
 
 
 		<!-- today's recommendation start -->
-		<div class="row width80 my-4">
+		<div class="row width65 my-4">
 			<div class="col">
 				<i class="bi bi-bag-heart-fill fs-3 text-danger"></i>
 				<span class="fs-3 fw-bold p-1">오늘의 쇼핑 제안</span>
@@ -217,7 +220,7 @@ footer div div a {
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<div class="card-group width80">
+					<div class="card-group width65">
 						<div class="card">
 							<a>
 								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
@@ -274,7 +277,7 @@ footer div div a {
 					</div>
 				</div>
 				<div class="carousel-item">
-					<div class="card-group width80">
+					<div class="card-group width65">
 						<div class="card">
 							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct6.jpg">
 							<div class="card-body">
@@ -328,7 +331,7 @@ footer div div a {
 					</div>
 				</div>
 				<div class="carousel-item">
-					<div class="card-group width80">
+					<div class="card-group width65">
 						<div class="card">
 							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct11.jpg">
 							<div class="card-body">
@@ -398,7 +401,7 @@ footer div div a {
 	</div>
 
 	<footer class="mt-5 bg-light">
-		<div class="row width90">
+		<div class="row p-2 border-top border-bottom">
 			<div class="col d-flex justify-content-center align-items-center">
 				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>
 				|
