--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -255,7 +255,9 @@ footer div div a {
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
+							<a href="./productView.html">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
+							</a>
 							<div class="card-body">
 								<h5 class="card-title">상품이름</h5>
 								<p class="card-text fw-bold">상품가격</p>
